--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
     push:
         branches:
-            - main
+            - dev
 
 permissions:
     contents: read
@@ -18,18 +18,9 @@ jobs:
             - name: Checkout repository
               uses: actions/checkout@v4
 
-            - name: Deploy to GitHub Pages
-              uses: actions/upload-pages-artifact@v3
+            - name: Deploy to gh-pages branch
+              uses: peaceiris/actions-gh-pages@v3
               with:
-                  path: ./app/build
-
-    deploy:
-        needs: build-and-deploy
-        runs-on: ubuntu-latest
-        environment:
-            name: github-pages
-            url: ${{ steps.deployment.outputs.page_url }}
-        steps:
-            - name: Deploy to GitHub Pages
-              id: deployment
-              uses: actions/deploy-pages@v4
+                  publish_dir: ./app/build
+                  publish_branch: gh-pages
+                  force_orphan: true
