--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,24 @@ jobs:
             - name: Checkout repository
               uses: actions/checkout@v4
 
+            - name: Set up Node.js
+              uses: actions/setup-node@v3
+              with:
+                node-version: '18'
+      
+            - name: Install dependencies
+              run: npm install
+              working-directory: ./app
+      
+            - name: Build project
+              run: npm run build
+              working-directory: ./app
+      
+            - name: Upload artifact
+              uses: actions/upload-pages-artifact@v3
+              with:
+                path: ./app/build
+
             - name: Deploy to GitHub Pages
               uses: actions/upload-pages-artifact@v3
               with:
