--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,9 @@
         "@mdx-js/react": "^3.0.0",
         "clsx": "^2.0.0",
         "prism-react-renderer": "^2.3.0",
-        "react": "^19.0.0"
+        "react": "^19.0.0",
+        "rehype-katex": "^7.0.1",
+        "remark-math": "^6.0.0"
     },
     "devDependencies": {
         "@docusaurus/module-type-aliases": "3.7.0",
